--- a/server-app/hospital.controller/pom.xml
+++ b/server-app/hospital.controller/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>${commons.io.version}</version>
 		</dependency>
+		<dependency>
+	        <groupId>org.springframework.security</groupId>
+	        <artifactId>spring-security-web</artifactId>
+	        <version>${spring.version}</version>
+      	</dependency>
 	</dependencies>
 	
 </project>
