--- a/server-app/hospital.model/pom.xml
+++ b/server-app/hospital.model/pom.xml
@@ -92,6 +92,11 @@
 			<artifactId>commons-logging</artifactId>
 			<version>${commons.logging.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons.io.version}</version>
+		</dependency>
 		<!-- Hibernate library dependecy end -->
 		<dependency>
 			<groupId>javax.inject</groupId>
