--- a/server-app/hospital.model/pom.xml
+++ b/server-app/hospital.model/pom.xml
@@ -35,6 +35,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.googlecode.mp4parser</groupId> 
+			<artifactId>isoparser</artifactId> 
+			<version>1.0-RC-27</version> 
+		</dependency> 
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
 			<version>${spring.security.version}</version>
