Preparada la captura de video y subida al servidor

--- a/server-app/hospital.model/src/main/resources/application.properties
+++ b/server-app/hospital.model/src/main/resources/application.properties
@@ -11,3 +11,6 @@ hibernate.hbm2ddl.auto=update
 
 ################### Beans Mapping #####################
 hibernate.mapping.packages=com.upsam.hospital.model.beans
+
+################### Configuration Variables ###################
+videos.location=D:/pacientes/xx/videos/
