Se introduce la utilidad de mandar correos para el recordar contraseña

--- a/server-app/hospital.model/pom.xml
+++ b/server-app/hospital.model/pom.xml
@@ -19,6 +19,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.upsam</groupId>
+			<artifactId>hospital.util</artifactId>
+			<version>${project.version}</version>
+      	</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
