Se añade el build al pom de util

--- a/server-app/hospital.util/pom.xml
+++ b/server-app/hospital.util/pom.xml
@@ -13,6 +13,10 @@
 	<packaging>jar</packaging>
 	<name>${project.groupId}.${project.artifactId}</name>
 
+	<build>
+		<finalName>${project.groupId}.${project.artifactId}</finalName>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.mail</groupId>
