Preparada la búsqueda de pacientes y la recuperación de uno por su id para mostrarlo en la pantalla de edición

--- a/server-app/hospital.controller/pom.xml
+++ b/server-app/hospital.controller/pom.xml
@@ -78,6 +78,11 @@
 	        <artifactId>spring-security-web</artifactId>
 	        <version>${spring.version}</version>
       	</dependency>
+      	<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
 	</dependencies>
 	
 </project>
