solucionado problema de versiones. para test se necesita a partir de la 3.2 y la version 3.2.0 provoca error al cargar. Se necesita usar la versión 3.2.1 al menos que soluciona el error

--- a/server-app/hospital.controller/pom.xml
+++ b/server-app/hospital.controller/pom.xml
@@ -92,7 +92,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>3.2.0.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
