--- a/server-app/hospital.model/src/main/resources/application.properties
+++ b/server-app/hospital.model/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 ################### JDBC Configuration ##########################
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/db_hospital
-jdbc.username=root
-jdbc.password=root
+#LOCAL
+#jdbc.username=root
+#jdbc.password=root
+#PRODUCCION
+jdbc.username=tomcat_user
+jdbc.password=atintra
 
 ################### Hibernate Configuration ##########################
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -13,4 +17,5 @@ hibernate.hbm2ddl.auto=update
 hibernate.mapping.packages=com.upsam.hospital.model.beans
 
 ################### Configuration Variables ###################
+#videos.location=D:/pacientes/xx/videos/
 videos.location=D:/pacientes/xx/videos/
