Añadido el warning e info de las faqs y metidas las fechas y descripciones para los antecedentes quirúrgicos y ortopédicos.

--- a/server-app/hospital.model/src/main/resources/application.properties
+++ b/server-app/hospital.model/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 ################### JDBC Configuration ##########################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/db_hospital
 #LOCAL
-#jdbc.username=root
-#jdbc.password=root
+jdbc.url=jdbc:mysql://localhost:3306/db_hospital
+jdbc.username=root
+jdbc.password=root
 #PRODUCCION
-jdbc.username=tomcat_user
-jdbc.password=atintra
+#jdbc.url=jdbc:mysql://192.168.1.193:3306/db_hospital
+#jdbc.username=tomcat_user
+#jdbc.password=atintra
 
 ################### Hibernate Configuration ##########################
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
