--- a/server-app/hospital.model/src/main/resources/application.properties
+++ b/server-app/hospital.model/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 ################### JDBC Configuration ##########################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#LOCAL
-jdbc.url=jdbc:mysql://localhost:3306/db_hospital
+jdbc.url=jdbc:mysql://localhost:3306/db_hospital_2
 jdbc.username=root
 jdbc.password=root
-#PRODUCCION
-#jdbc.url=jdbc:mysql://192.168.1.193:3306/db_hospital
-#jdbc.username=tomcat_user
-#jdbc.password=atintra
+
+
 
 ################### Hibernate Configuration ##########################
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -18,5 +15,10 @@ hibernate.hbm2ddl.auto=update
 hibernate.mapping.packages=com.upsam.hospital.model.beans
 
 ################### Configuration Variables ###################
-#videos.location=D:/pacientes/xx/videos/
 videos.location=D:/pacientes/xx/videos/
+
+#PRODUCCION
+#jdbc.url=jdbc:mysql://192.168.1.193:3306/db_hospital
+#jdbc.username=tomcat_user
+#jdbc.password=atintra
+#videos.location=/sistemas/espacios/videos_hospital/xx/videos/
