--- a/server-app/hospital.util/pom.xml
+++ b/server-app/hospital.util/pom.xml
@@ -21,6 +21,7 @@
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
+			<version>${mail.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
