--- a/server-app/hospital.view/pom.xml
+++ b/server-app/hospital.view/pom.xml
@@ -11,10 +11,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>hospital.view</artifactId>
 	<packaging>war</packaging>
-	<name>${project.groupId}.${project.artifactId}</name>
+	<name>${finalWarName}</name>
 
 	<build>
-		<finalName>${project.groupId}.${project.artifactId}</finalName>
+		<finalName>${finalWarName}</finalName>
 	</build>
 
 	<dependencies>
