--- a/server-app/hospital.model/src/main/resources/application.properties
+++ b/server-app/hospital.model/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ################### JDBC Configuration ##########################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/db_hospital_2
+jdbc.url=jdbc:mysql://localhost:3306/db_hospital
 jdbc.username=root
 jdbc.password=root
 
