Ultimos retoques de maquetación

--- a/server-app/hospital.model/src/main/resources/application.properties
+++ b/server-app/hospital.model/src/main/resources/application.properties
@@ -1,20 +1,18 @@
 ################### JDBC Configuration ##########################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/db_hospital_2
-jdbc.username=root
-jdbc.password=root
-
-
 
 ################### Hibernate Configuration ##########################
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
-
-################### Beans Mapping #####################
 hibernate.mapping.packages=com.upsam.hospital.model.beans
 
-################### Configuration Variables ###################
+
+
+#LOCAL
+jdbc.url=jdbc:mysql://localhost:3306/db_hospital_2
+jdbc.username=root
+jdbc.password=root
 videos.location=D:/pacientes/xx/videos/
 
 #PRODUCCION
