--- a/server-app/hospital.model/src/main/resources/application.properties
+++ b/server-app/hospital.model/src/main/resources/application.properties
@@ -10,7 +10,7 @@ hibernate.mapping.packages=com.upsam.hospital.model.beans
 
 
 #LOCAL
-jdbc.url=jdbc:mysql://localhost:3306/db_hospital_2
+jdbc.url=jdbc:mysql://localhost:3306/db_hospital
 jdbc.username=root
 jdbc.password=root
 videos.location=D:/pacientes/xx/videos/
