Corregida la subida y descarga de ficheros

--- a/server-app/hospital.model/src/main/resources/application.properties
+++ b/server-app/hospital.model/src/main/resources/application.properties
@@ -10,13 +10,13 @@ hibernate.mapping.packages=com.upsam.hospital.model.beans
 
 
 #LOCAL
-jdbc.url=jdbc:mysql://localhost:3306/db_hospital_2
-jdbc.username=root
-jdbc.password=root
-videos.location=D:/pacientes/xx/videos/
+#jdbc.url=jdbc:mysql://localhost:3306/db_hospital_2
+#jdbc.username=root
+#jdbc.password=root
+#videos.location=D:/pacientes/xx/videos/
 
 #PRODUCCION
-#jdbc.url=jdbc:mysql://192.168.1.193:3306/db_hospital
-#jdbc.username=tomcat_user
-#jdbc.password=atintra
-#videos.location=/sistemas/espacios/videos_hospital/xx/videos/
+jdbc.url=jdbc:mysql://192.168.1.193:3306/db_hospital
+jdbc.username=tomcat_user
+jdbc.password=atintra
+videos.location=/sistemas/espacios/videos_hospital/xx/videos/
